<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cultural Fest 2013</string>
    <string name="action_settings">Settings</string>
    <string name="logo_of_surya_world">Logo of Surya World</string>
    <string name="cfest">CULTURAL FEST</string>
    <string name="loading">Loading</string>
    <string name="data">Star Night on 6th September\nJal The Band</string>
    <string name="eventstab">events tab</string>
    <string name="find_us">find us</string>
    <string name="inquiry">inquiry</string>
    <string name="about">about</string>
    <string name="home_tab">home tab</string>
    <string name="playandwin">play and win</string>
    <string name="get_passes">get passes</string>
    <string name="invite_friends">invite friends</string>
    <string name="ad">ads here</string>
    <string name="home"> Home</string>
    <string name="event_name">event name</string>
    <string name="find_us_tab_data">Surya World, NH1, Bapror,\nTehsil Rajpura, District Patiala\nTel: +91-172 6619900</string>
    <string name="findustabdata">campus address, phone number, campus address, phone number, numberer, number, number</string>
    <string name="campus_address">Campus Address</string>
    <string name="Email">Email</string>
    <string name="toll_free_number">Toll Free Number</string>
    <string name="toll_number">1800-2-666-000</string>
    <string name="website">Website</string>
    <string name="fest_website">http://suryaworldfest.com</string>
    <string name="fest_email_address">info@suryaworldfest.com</string>
    <string name="interested">Interested ?</string>
    <string name="fill_details">Just fill out your details and we will contact you</string>
    <string name="name">Name</string>
    <string name="college_name">College</string>
    <string name="phone">Phone</string>
    <string name="name_here">Your Name Here</string>
    <string name="college_here">Your College Name Here</string>
    <string name="email_here">Your Email Here</string>
    <string name="phone_here">Your Phone Number Here</string>
    <string name="passes">I want Passes for Star Night</string>
    <string name="event_participate">I want to participate in events</string>
    <string name="send_text">Send Text</string>
    <string name="send_mail">Send Email</string>
    <string name="facebook_like">Follow us on Facebook\nhttps://facebook.com/suryauday</string>
    <string name="cf">Cultural Fest</string>
    <string name="surya_world">Surya World</string>
    <string name="date_of_fest">Date of Fest</string>
    <string name="date_fest">October 25-26, 2013\nFriday - Saturday\n10:00AM to 5:00PM</string>
    <string name="star_night">Star Night</string>
    <string name="star_details">Jal The Band\nOctober 26, 2013 7:00PM</string>
    <string name="add_remind">Remind Me</string>
    <string name="dandia_night">Dandia Night</string>
    <string name="time_dandia_night">October 25, 2013 8:00PM</string>
    <string name="courses">Courses</string>
    <string name="student_clubs">Student Clubs</string>
    <string name="admission_office">Admission Office</string>
    <string name="follow_us">Follow Us</string>
    <string name="fb">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="youtube">Youtube</string>
    <string name="linked_in">Linked In</string>
    <string name="sw_website">http://suryaworld.edu.in</string>
    <string name="s_pharmawebsite">http://suryapharma.com</string>
    <string name="booklogo">booklogo</string>
    <string name="campus_logo">campus_logo</string>
    <string name="SWACM">ACM</string>
    <string name="aiesec">AIESEC</string>
    <string name="googlestudentclub">Google Student Club</string>
    <string name="greensquad">GreenSquad</string>
    <string name="ieeesw">IEEE</string>
    <string name="nasa">NASA</string>
    <string name="sae">SAE</string>
    <string name="home_logo">home logo</string>
    <string name="empty"></string>
    <string name="About">About</string>
    <string name="about_icon">about icon</string>
    <string name="developer">Developer</string>
    <string name="swacm">Surya World ACM Student Chapter</string>
    <string name="dev">Developer &lt;/></string>
    <string name="developer_icon">developer icon</string>
    <string name="ksharma">Karan Sharma</string>
    <string name="myemail">karan@mavenscientists.com</string>
    <string name="campus_address_data">Surya World, NH1, Bapror,\nTehsil Rajpura, District Patiala\nTel: +91-172 6619900\nToll Free: 1800-2-666-000</string>
    <string name="toll_num">Toll Free: 1800-2-666-000</string>
    <string name="admision_office_address">SCO 141-143, Sector 43-B,\nChandigarh, UT (India)</string>
    <string name="email_admission">admission@suryaworld.edu.in</string>
    <string name="invite_logo">invite logo</string>
    <string name="get_pass_logo">get pass logo</string>
    <string name="game_icon">game icon</string>
    <string name="getpasses">Get Passes</string>
    <string name="sajal">Sajal Puri</string>
    <string name="get_pass_number">+91-9653874484</string>
    <string name="let_us_contact">let us contact you</string>
    <string name="fill_inquiry_form">Fill the Inquiry Form</string>
    <string name="inviteFriends">Invite Friends</string>
    <string name="deve_using">Developed Using</string>
    <string name="eclipse_ide">Eclipse Platform 4.3.1v (Kepler Release)</string>
    <string name="dev_tools">Development Tools Used</string>
    <string name="androidsdk">Android SDK API-17\n4.2.2v (Jelly Bean)</string>
    <string name="adt">Android Development Toolkit 22.2.1v</string>
    <string name="mavenscientists">Maven Scientists</string>
    <string name="playnwin">Play and Win</string>
    <string name="points">Points</string>
    <string name="zero">0</string>
    <string name="level">Level</string>
    <string name="one">1</string>
    <string name="jumbled_word">DRWO</string>
    <string name="youranswerhere">Put the Correct Word Here</string>
    <string name="check">Check</string>
    <string name="synconline">"Sync Online "</string>
    <string name="syncButtonHint">Sync your score with your online account</string>
    <string name="hint">hint</string>
    <string name="oc">OC</string>
    <string name="organizer">Organizers</string>
    
</resources>
