<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    	android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:background="#FFF5EE" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="2dp"
        android:contentDescription="@string/logo_of_surya_world"
        android:src="@drawable/swlogosmall" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView1"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/imageView1"
        android:paddingLeft="10dp"
        android:text="@string/cfest"
        android:textColor="#4169E1"
        android:textSize="22sp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/imageView1"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/eventstab"
        android:src="@drawable/notoneventstab" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView2"
        android:layout_toRightOf="@+id/imageView2"
        android:contentDescription="@string/find_us"
        android:src="@drawable/notonfindustab" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView3"
        android:layout_toRightOf="@+id/imageView3"
        android:contentDescription="@string/inquiry"
        android:src="@drawable/notoninquirytab" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView6"
        android:layout_toLeftOf="@+id/textView6"
        android:src="@drawable/invitelogosmall" android:contentDescription="@string/invite_logo"/>

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView7"
        android:layout_alignTop="@+id/textView5"
        android:layout_marginLeft="3dp"
        android:contentDescription="@string/get_pass_logo"
        android:src="@drawable/getpasslogosmall" />
    
    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:autoLink="web"
        android:background="#000000"
        android:gravity="center_vertical"
        android:height="50dp"
        android:paddingBottom="2dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="2dp"
        android:text="@string/follow_us"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:typeface="sans" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView7"
        android:layout_alignBottom="@+id/textView7"
        android:layout_alignLeft="@+id/textView1"
        android:background="#3b5988"
        android:gravity="left|center_vertical"
        android:height="30dp"
        android:paddingBottom="2dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="2dp"
        android:text="@string/fb"
        android:textColor="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="20sp"
        android:typeface="sans" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/imageView4"
        android:contentDescription="@string/about"
        android:src="@drawable/notonabouttab" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView6"
        android:layout_centerVertical="true"
        android:gravity="left"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp"
        android:text="@string/get_passes"
        android:textColor="#FC7E27"
        android:textSize="25sp"
        android:typeface="sans" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView2"
        android:layout_toRightOf="@+id/imageView6"
        android:paddingLeft="5dp"
        android:paddingTop="1dp"
        android:text="@string/home"
        android:textColor="#FC7E27"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/textView3"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/home_tab"
        android:src="@drawable/colorhomelogo" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView5"
        android:layout_alignLeft="@+id/textView5"
        android:layout_marginBottom="23dp"
        android:gravity="left"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp"
        android:text="@string/playandwin"
        android:textColor="#FC7E27"
        android:textSize="25sp"
        android:typeface="sans" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView8"
        android:layout_below="@+id/imageView8"
        android:layout_marginTop="24dp"
        android:gravity="left"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp"
        android:text="@string/invite_friends"
        android:textColor="#FC7E27"
        android:textSize="25sp"
        android:typeface="sans" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignRight="@+id/imageView7"
        android:contentDescription="@string/game_icon"
        android:src="@drawable/gameicon" />
    
</RelativeLayout>
